Revision history for WWW::Mechanize

{{$NEXT}}

2.05      2021-09-21 14:06:00Z
    - Update docs for protocols_allowed and protocols_forbidden (GH#323) (Olaf
      Alders)

2.04      2021-08-06 12:28:31Z
    [ENHANCEMENTS]
    - Add a head() method to allow relative URLs (GH#321) (Julien Fiegehenn)

    [DOCUMENTATION]
    - Document that form_id() accepts an id, not a name (GH#319) (Olaf Alders)

2.03      2020-11-10 14:47:04Z
    [FIXED]
    - Validate exclusive button selectors (GH#314) (Ferenc Erki)

2.02      2020-10-13 13:50:28Z
    [ENHANCEMENTS]
    - Add redirects() as a short to HTTP::Response->redirects (GH#116) (Julien Fiegehenn)
    - click_button( value => $foo) now also works for button tags and image buttons
      (GH#131) (Spencer Christensen) and (Julien Fiegehenn)

    [DOCUMENTATION]
    - Document that click_button() will die when it cannot find a button (GH#136) (Julien Fiegehenn)
    - Document that content() returns undef before a request was made (GH#134) (Julien Fiegehenn)

    [TESTS]
    - Add a test for dump_forms() with multiselect (GH#133) (Julien Fiegehenn)
    - Add tests for select multiple (GH#132) (Michael G. Schwern) and (Julien Fiegehenn)
    - Remove use of discouraged vars pragma (James Raspass)
    - Add tests for dump_forms() and field() with empty attributes (GH#125) (Julien Fiegehenn)

2.01      2020-09-18 17:51:10Z
    - Add rel filter to find_link() (GH#305) (Julien Fiegehenn)
    - Fix typos (GH#304) (Ferenc Erki)

2.00      2020-06-09 19:09:53Z
    - Require LWP::UserAgent 6.45 (GH#302) (Shoichi Kaji)

1.99      2020-06-08 15:35:04Z
    - Bump HTTP::Daemon test dependency to 6.12 (GH#300) (Olaf Alders)

1.98      2020-05-25 17:06:47Z (TRIAL RELEASE)
    - Don't make assumptions about port 80 in test (GH#299) (Olaf Alders)

1.97      2020-05-14 00:46:53Z
    - Respect CDATA[[ sections when parsing HTML (GH#298) (Max Maischein)
    - extract image links also from css (GH#12) (Jozef Kutej) and (GH#297)